Small bug corrections